fix: removido overflow horizontal

--- a/web/src/pages/HomeScreen/HomeScreen.css
+++ b/web/src/pages/HomeScreen/HomeScreen.css
@@ -6,6 +6,11 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  overflow-x: hidden; /* Remove barra horizontal */
+}
+
 body {
   font-family: "Poppins", sans-serif;
   line-height: 1.6;
